networking/dns/pod1.yml
kind: Pod
apiVersion: v1
metadata:
  name: app
  labels:
    app: front
spec:
  containers:
    - name: httpd
      image: httpd
      ports:
        - containerPort: 80
