networking/dns/pod2.yml
kind: Pod
apiVersion: v1
metadata:
  name: app-os
spec:
  containers:
    - name: app-os
      image: ubuntu
      command: ["/bin/bash","-c","while true;do echo 'hi';done"]
