networking/dns/service.yml
kind: Service
apiVersion: v1
metadata:
  name: app-service
spec:
  ports:  
    - port: 80
      targetPort: 80
  type: NodePort
  selector:
    app: front
