networking/dns/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd
spec:
  rules:
    - host: foo.bar.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-server
                port:
                  number: 80
